gcc-10 (10.2.1-2) UNRELEASED; urgency=medium

  * Update to git 20201221 from the gcc-10 branch.
    - Fix PR rtl-optimization/97092, PR ada/98230, PR c++/64194, PR d/98277,
      PR fortran/98307.
  * For the gcn offload compiler, use a version fixing LLVM Bug 48201.
  * Don't install the lto-dump binary in the hppa64 package. Closes: #977461.

 -- Matthias Klose <doko@debian.org>  Mon, 21 Dec 2020 13:25:33 +0100

gcc-10 (10.2.1-1) unstable; urgency=medium

  * Update to git 20201207 from the gcc-10 branch.
    - Fix PR middle-end/94600, PR target/98086 (x86), PR middle-end/95694,
      PR fortran/95342.
  * Bump version to 10.2.1.
  * Build again using gnat-10 everywhere.

 -- Matthias Klose <doko@debian.org>  Mon, 07 Dec 2020 10:23:22 +0100

gcc-10 (10.2.0-23) unstable; urgency=medium

  * Update to git 20201203 from the gcc-10 branch.
    - Fix PR tree-optimization/97457, PR rtl-optimization/98037, PR c++/97904,
      PR middle-end/95694.
  * Relax the libc-dev dependencies for kfreebsd.
  * Explicitly build with gnat-10 on m68k.

 -- Matthias Klose <doko@debian.org>  Thu, 03 Dec 2020 14:42:11 +0100

gcc-10 (10.2.0-21) unstable; urgency=medium

  * Build using gnat-9 to bootstrap on kfreebsd.

 -- Matthias Klose <doko@debian.org>  Wed, 02 Dec 2020 14:46:47 +0100

gcc-10 (10.2.0-20) unstable; urgency=medium

  * Update to git 20201202 from the gcc-10 branch.
    - Fix PR target/97528 (ARM), PR debug/97599, PR c/97958, PR fortran/85796,
      PR libstdc++/98001, PR libstdc++/97935, PR target/97939 (SPARC),
      PR target/96607 (SPARC), PR tree-optimization/97812, PR middle-end/95171,
      PR tree-optimization/97760, PR tree-optimization/97539,
      PR middle-end/97554, PR libstdc++/95322, PR tree-optimization/96698,
      PR tree-optimization/96920.
  * Don't strip the sanitizer libraries, these are only used for debugging.
    LP: #1894166.
  * Don't run the libgphobos-link test on powerpc architectures.