@@ -2,7 +2,7 @@
 
 --- a/src/gcc/config/aarch64/aarch64.c
 +++ b/src/gcc/config/aarch64/aarch64.c
-@@ -22739,6 +22739,16 @@ aarch64_stack_protect_guard (void)
+@@ -23070,6 +23070,16 @@ aarch64_stack_protect_guard (void)
    return NULL_TREE;
  }
  
@@ -19,7 +19,7 @@
  /* Return the diagnostic message string if conversion from FROMTYPE to
     TOTYPE is not allowed, NULL otherwise.  */
  
-@@ -23079,6 +23089,9 @@ aarch64_libgcc_floating_mode_supported_p
+@@ -23635,6 +23645,9 @@ aarch64_libgcc_floating_mode_supported_p
  #undef TARGET_NARROW_VOLATILE_BITFIELD
  #define TARGET_NARROW_VOLATILE_BITFIELD hook_bool_void_false
  
