@@ -2,7 +2,7 @@
 
 --- a/src/gcc/config.gcc
 +++ b/src/gcc/config.gcc
-@@ -4226,10 +4226,18 @@ case "${target}" in
+@@ -4246,10 +4246,18 @@ case "${target}" in
  		done
  
  		case "$with_float" in
@@ -23,7 +23,7 @@
  		*)
  			echo "Unknown floating point type used in --with-float=$with_float" 1>&2
  			exit 1
-@@ -4264,6 +4272,9 @@ case "${target}" in
+@@ -4284,6 +4292,9 @@ case "${target}" in
  		"" \
  		| arm | thumb )
  			#OK
