@@ -61,7 +61,7 @@ libgomp/
  
  enum lto_mode_d {
    LTO_MODE_NONE,			/* Not doing LTO.  */
-@@ -934,8 +935,10 @@ compile_images_for_offload_targets (unsi
+@@ -959,8 +960,10 @@ compile_images_for_offload_targets (unsi
    if (!target_names)
      return;
    unsigned num_targets = parse_env_var (target_names, &names, NULL);
@@ -72,7 +72,7 @@ libgomp/
    const char *compiler_path = getenv ("COMPILER_PATH");
    if (!compiler_path)
      goto out;
-@@ -948,18 +951,32 @@ compile_images_for_offload_targets (unsi
+@@ -973,18 +976,32 @@ compile_images_for_offload_targets (unsi
        /* HSA does not use LTO-like streaming and a different compiler, skip
  	 it. */
        if (strcmp (names[i], "hsa") == 0)
@@ -110,7 +110,7 @@ libgomp/
  }
 --- a/src/libgomp/target.c
 +++ b/src/libgomp/target.c
-@@ -3009,7 +3009,7 @@ gomp_load_plugin_for_device (struct gomp
+@@ -3015,7 +3015,7 @@ gomp_load_plugin_for_device (struct gomp
  
    void *plugin_handle = dlopen (plugin_name, RTLD_LAZY);
    if (!plugin_handle)
