@@ -2,7 +2,7 @@
 
 --- a/src/configure.ac
 +++ b/src/configure.ac
-@@ -3178,7 +3178,7 @@ target_configargs="$target_configargs ${
+@@ -3179,7 +3179,7 @@ target_configargs="$target_configargs ${
  # native.  However, it would be better to use other mechanisms to make the
  # sorts of decisions they want to make on this basis.  Please consider
  # this option to be deprecated.  FIXME.
@@ -13,7 +13,7 @@
  
 --- a/src/gcc/configure.ac
 +++ b/src/gcc/configure.ac
-@@ -2242,14 +2242,14 @@ SYSTEM_HEADER_DIR='$(NATIVE_SYSTEM_HEADE
+@@ -2247,14 +2247,14 @@ SYSTEM_HEADER_DIR='$(NATIVE_SYSTEM_HEADE
  BUILD_SYSTEM_HEADER_DIR=$SYSTEM_HEADER_DIR	AC_SUBST(BUILD_SYSTEM_HEADER_DIR)
  
  if test x$host != x$target || test "x$TARGET_SYSTEM_ROOT" != x ||
@@ -30,7 +30,7 @@
    then
      CROSS="-DCROSS_DIRECTORY_STRUCTURE"
      ALL=all.cross
-@@ -6670,14 +6670,14 @@ AC_SUBST_FILE(language_hooks)
+@@ -6675,14 +6675,14 @@ AC_SUBST_FILE(language_hooks)
  
  # Echo link setup.
  if test x${build} = x${host} ; then
