@@ -102,7 +102,7 @@
        %{static:-static} \
 --- a/src/gcc/config/sparc/linux.h
 +++ b/src/gcc/config/sparc/linux.h
-@@ -87,7 +87,7 @@ extern const char *host_detect_local_cpu
+@@ -81,7 +81,7 @@ extern const char *host_detect_local_cpu
  #define GLIBC_DYNAMIC_LINKER "/lib/ld-linux.so.2"
  
  #undef  LINK_SPEC
