@@ -111,7 +111,7 @@
 +endif
 --- a/src/gcc/config.gcc
 +++ b/src/gcc/config.gcc
-@@ -2522,6 +2522,11 @@ mips*-*-linux*)				# Linux MIPS, either
+@@ -2523,6 +2523,11 @@ mips*-*-linux*)				# Linux MIPS, either
  			target_cpu_default=MASK_SOFT_FLOAT_ABI
  			enable_mips_multilibs="yes"
  			;;
@@ -123,7 +123,7 @@
  		mipsisa64r6*-*-linux*)
  			default_mips_abi=n32
  			default_mips_arch=mips64r6
-@@ -2532,6 +2537,10 @@ mips*-*-linux*)				# Linux MIPS, either
+@@ -2533,6 +2538,10 @@ mips*-*-linux*)				# Linux MIPS, either
  			default_mips_arch=mips64r2
  			enable_mips_multilibs="yes"
  			;;
@@ -134,7 +134,7 @@
  		mips64*-*-linux* | mipsisa64*-*-linux*)
  			default_mips_abi=n32
  			enable_mips_multilibs="yes"
-@@ -3546,6 +3555,16 @@ case ${target} in
+@@ -3547,6 +3556,16 @@ case ${target} in
  	;;
  esac
  
@@ -151,7 +151,7 @@
  # Build mkoffload tool
  case ${target} in
  *-intelmic-* | *-intelmicemul-*)
-@@ -5184,7 +5203,7 @@ case ${target} in
+@@ -5204,7 +5223,7 @@ case ${target} in
  		;;
  	i[34567]86-*-linux* | x86_64-*-linux*)
  		extra_objs="${extra_objs} cet.o"
