@@ -2,7 +2,7 @@
 
 --- a/src/configure.ac
 +++ b/src/configure.ac
-@@ -3318,7 +3318,7 @@ fi
+@@ -3319,7 +3319,7 @@ fi
  # being built; programs in there won't even run.
  if test "${build}" = "${host}" && test -d ${srcdir}/gcc; then
    # Search for pre-installed headers if nothing else fits.
