@@ -2,7 +2,7 @@
 
 --- a/src/configure.ac
 +++ b/src/configure.ac
-@@ -3664,6 +3664,8 @@ AC_SUBST(stage2_werror_flag)
+@@ -3665,6 +3665,8 @@ AC_SUBST(stage2_werror_flag)
  
  compare_exclusions="gcc/cc*-checksum\$(objext) | gcc/ada/*tools/*"
  compare_exclusions="$compare_exclusions | *m2/*/M2Version*\$(objext)"
