@@ -30,7 +30,7 @@ Date:   Sun Mar 22 18:51:48 2020 +0000
 
 --- a/src/gcc/config/rs6000/rs6000.c
 +++ b/src/gcc/config/rs6000/rs6000.c
-@@ -12450,6 +12450,15 @@ rs6000_can_change_mode_class (machine_mo
+@@ -12466,6 +12466,15 @@ rs6000_can_change_mode_class (machine_mo
  	      || (to == SDmode && from == DDmode))
  	    return true;
  
