@@ -19,7 +19,7 @@ Changelog gcc/
 
 --- a/src/gcc/config/sparc/linux64.h
 +++ b/src/gcc/config/sparc/linux64.h
-@@ -166,9 +166,9 @@ extern const char *host_detect_local_cpu
+@@ -160,9 +160,9 @@ extern const char *host_detect_local_cpu
  #else
  #define CC1_SPEC GNU_USER_TARGET_CC1_SPEC ASAN_CC1_SPEC \
  "%{m32:%{m64:%emay not use both -m32 and -m64}} \
