@@ -5,6 +5,7 @@ gcc-10 (10.2.1-2) UNRELEASED; urgency=medium
       PR fortran/98307.
   * For the gcn offload compiler, use a version fixing LLVM Bug 48201.
   * Don't install the lto-dump binary in the hppa64 package. Closes: #977461.
+  * Refresh patches.
 
  -- Matthias Klose <doko@debian.org>  Mon, 21 Dec 2020 13:25:33 +0100
 
